# ED_Lib

./: .gitignore  CMakeLists.txt
include/ED_Lib/: ED.h  EDCircles.h  EDColor.h  EDLines.h  EDPF.h  NFA.h
src/: ED.cpp  EDCircles.cpp  EDColor.cpp  EDLines.cpp  EDPF.cpp  NFA.cpp
tests/: CMakeLists.txt  test.cpp  test_ED.cpp  video_test.cpp
