if (TARGET highgui)
    add_executable(test_1 test.cpp)
    target_link_libraries(test_1 ${OpenCV_LIBS} EDLib)
    target_include_directories(test_1 PUBLIC ${OpenCV_INCLUDE_DIRS})
endif()

if ((TARGET imgcodecs) AND (TARGET ximgproc))
    add_executable(test_ED test_ED.cpp)
    target_link_libraries(test_ED ${OpenCV_LIBS} EDLib)
    target_include_directories(test_ED PUBLIC ${OpenCV_INCLUDE_DIRS})
endif()

if ((TARGET imgproc) AND ((TARGET videoio) AND (TARGET ximgproc)))
    add_executable(video_test video_test.cpp)
    target_link_libraries(video_test ${OpenCV_LIBS} EDLib)
    target_include_directories(video_test PUBLIC ${OpenCV_INCLUDE_DIRS})
endif()
